# optimization_methods

./: .gitignore  pyproject.toml  Методы_Оптимизации.ipynb
