[tool.poetry]
name = "optimization-methods"
version = "0.1.0"
description = ""
authors = ["nodax <ioann.ishenko.2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
